--- a/views/layouts/dashboard.ejs
+++ b/views/layouts/dashboard.ejs
@@ -217,7 +217,7 @@
             >
           </a>
 
-          <%- include("../includes/Reservations.ejs", {branch: branch, branches:
+          <%- include("../includes/reservations.ejs", {branch: branch, branches:
           branches, branchId: branchId}) %>
 
           <a
