--- a/views/includes/tables.ejs
+++ b/views/includes/tables.ejs
@@ -48,7 +48,7 @@
 
     <!-- Tables -->
     <form
-      action="/showTables/<%= branchId %>"
+      action="/tables/showTables/<%= branchId %>"
       method="GET"
       class="content-form"
     >
@@ -62,7 +62,7 @@
 
     <!-- QR Codes -->
     <form
-      action="/showQRCodes/<%= branchId %>"
+      action="/tables/showQRCodes/<%= branchId %>"
       method="GET"
       class="content-form"
     >
