--- a/views/layouts/dashboard.ejs
+++ b/views/layouts/dashboard.ejs
@@ -9,6 +9,9 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+
     <style>
       body {
         font-family: "Inter", sans-serif;
@@ -248,27 +251,10 @@
 
           <%- include("../includes/reservations.ejs", {branch: branch, branches:
           branches, branchId: branchId}) %>
-
-          <a
-            href="#"
-            class="flex items-center space-x-3 px-4 py-3 rounded-lg hover:bg-gray-700 hover:bg-opacity-50 text-gray-300 hover:text-white transition-all"
-          >
-            <svg
-              class="w-5 h-5 flex-shrink-0"
-              fill="none"
-              stroke="currentColor"
-              viewBox="0 0 24 24"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z"
-              />
-            </svg>
-            <span class="font-medium text-sm sm:text-base">Customers</span>
-          </a>
-
+          <!-- Customers-->
+          <%- include("../includes/customers.ejs", { branch: branch, branches:
+          branches, branchId: branchId }) %>
+          <!-- Staff -->
           <%- include("../includes/staff.ejs", { branch: branch, branches:
           branches, branchId: branchId }) %>
           <!-- delivery executive -->
