--- a/views/layouts/dashboard.ejs
+++ b/views/layouts/dashboard.ejs
@@ -259,8 +259,14 @@
           branches, branchId: branchId }) %>
           <!-- delivery executive -->
           <%- include("../includes/delivery-executive.ejs") %>
+          <!-- Payments -->
+          <%- include("../includes/payments.ejs",{ branch: branch, branches:
+          branches, branchId: branchId }) %>
+          <!-- settings -->
+          <%- include("../includes/settings.ejs", { branch: branch, branches:
+          branches, branchId: branchId }) %>
         </nav>
-
+        <!-- customer-site -->
         <%- include("../includes/customer-site.ejs", { branch: branch, branches:
         branches, branchId: branchId }) %>
       </aside>
@@ -312,12 +318,15 @@
               <div class="hidden sm:flex items-center space-x-2">
                 <span
                   class="px-2 sm:px-3 py-1 bg-orange-100 text-orange-600 rounded-full text-xs font-medium whitespace-nowrap"
-                  >Orders: 0</span
+                  >Orders: <%= statistics ? statistics.todayOrdersCount : 0
+                  %></span
                 >
                 <span
                   class="px-2 sm:px-3 py-1 bg-blue-100 text-blue-600 rounded-full text-xs font-medium whitespace-nowrap"
-                  >Reservations: 0</span
                 >
+                  Reservations: <%= statistics ?
+                  statistics.todayReservationsCount : 0 %>
+                </span>
               </div>
 
               <!-- User Avatar -->
@@ -427,7 +436,7 @@
         </header>
 
         <!-- Dashboard Content -->
-        <div id="dashboard-content" class="p-4 sm:p-6 lg:p-8">
+        <div id="dashboard-content" class="p-4 sm:p-6 lg:p-4">
           <%- include("../includes/statistics.ejs", { branch: branch, branches:
           branches, branchId: branchId }) %>
         </div>
